--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,9 @@
           package="com.example.EssenseDatabase"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="21"/>
+    <uses-sdk android:minSdkVersion="21"></uses-sdk>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="EssenceDatabase"
                   android:label="@string/app_name">
