--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,14 +5,33 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="21"></uses-sdk>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="EssenceDatabase"
+        <activity android:name=".main"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:label="@string/app_name" android:name=".register">
+
+        </activity>
+
+        <activity android:label="@string/app_name" android:name=".registered">
+
+        </activity>
+
+        <activity android:label="EssenceDatabase USER PANEL" android:name=".login">
+
+        </activity>
+
+        <activity android:label="@string/app_name" android:name=".passwordReset">
+
+        </activity>
+        <activity android:label="@string/app_name" android:name=".changePassword">
+
         </activity>
     </application>
 </manifest>
