--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,30 +7,28 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name=".main"
-                  android:label="@string/app_name">
+    <application android:label="@string/app_name" android:icon="@drawable/data33">
+        <activity android:label="@string/app_name" android:name="login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:label="@string/app_name" android:name=".register">
+        <activity android:label="@string/app_name" android:name="main" >
+
+        </activity>
+        <activity android:label="@string/app_name" android:name="register">
 
         </activity>
 
-        <activity android:label="@string/app_name" android:name=".registered">
+        <activity android:label="@string/app_name" android:name="registered">
 
         </activity>
 
-        <activity android:label="EssenceDatabase USER PANEL" android:name=".login">
+        <activity android:label="@string/app_name" android:name="passwordReset">
 
         </activity>
-
-        <activity android:label="@string/app_name" android:name=".passwordReset">
-
-        </activity>
-        <activity android:label="@string/app_name" android:name=".changePassword">
+        <activity android:label="@string/app_name" android:name="changePassword">
 
         </activity>
     </application>
