--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,15 +7,17 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    <application android:label="@string/app_name" android:icon="@drawable/data33">
+    <application android:label="@string/app_name" android:icon="@drawable/data33" android:theme="@android:style/Theme.NoTitleBar">
         <activity android:label="@string/app_name" android:name="login">
+        </activity>
+        <activity android:label="@string/app_name" android:name="main" >
+
+        </activity>
+        <activity android:label="@string/app_name" android:name="launch" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:label="@string/app_name" android:name="main" >
-
         </activity>
         <activity android:label="@string/app_name" android:name="register">
 
