--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,7 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="21"></uses-sdk>
+    <category android:name="Vie"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
@@ -31,6 +32,11 @@
 
         </activity>
         <activity android:label="@string/app_name" android:name="changePassword">
+
+        </activity>
+        <activity
+                android:label="@string/app_name"
+                android:name="result">
 
         </activity>
     </application>
