--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,21 @@
           package="com.example.EssenseDatabase"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="21"></uses-sdk>
-    <category android:name="Vie"/>
+    <uses-sdk android:minSdkVersion="21"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    <application android:label="@string/app_name" android:icon="@drawable/data33" android:theme="@android:style/Theme.NoTitleBar">
+
+    <application android:label="@string/app_name" android:icon="@drawable/data33" android:theme="@android:style/Theme.NoTitleBar"
+                 android:allowBackup="false">
+        <receiver
+                android:name=".ConnexionReceiver"
+                android:enabled="true"
+                android:priority="0" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
         <activity android:label="@string/app_name" android:name="login">
         </activity>
         <activity android:label="@string/app_name" android:name="main" >
