--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
-    - android-19
+    - platform-tools
+    - tools
+    - android-21
+    - build-tools-22.0.1
