--- a/build.xml
+++ b/build.xml
@@ -87,6 +87,6 @@
          in order to avoid having your file be overridden by tools such as "android update project"
     -->
     <!-- version-tag: 1 -->
-    <import file="${sdk.dir}/essencedatabase.xml"/>
+    <import file="essencedatabase.xml"/>
 
 </project>
