--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.EssenseDatabase"
+          package="net.valentinc.EssenceDatabase"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="21"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
@@ -20,7 +20,7 @@
         </receiver>
         <activity android:label="@string/app_name" android:name="login">
         </activity>
-        <activity android:label="@string/app_name" android:name="main" >
+        <activity android:label="@string/app_name" android:name=".AddInfo" >
 
         </activity>
         <activity android:label="@string/app_name" android:name="launch" >
