--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ android:
     # The SDK version used to compile your project
     - android-21
 
-script: gradle clean build
+install: gradle clean build
