--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="net.valentinc.EssenceDatabase"
-          android:versionCode="6"
-          android:versionName="1.1">
+          android:versionCode="8"
+          android:versionName="1.5">
     <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="21"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -31,6 +31,11 @@
         <activity
                 android:label="@string/app_name"
                 android:name="result">
+
+        </activity>
+        <activity
+                android:label="@string/app_name"
+                android:name="Manage">
 
         </activity>
     </application>
