--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,9 @@ android:
     # The SDK version used to compile your project
     - android-21
 
+	# Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-19
 install: gradle clean build
