--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion '23.0.1'
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
+
     defaultConfig {
         applicationId "net.valentinc.EssenceDatabase"
-        minSdkVersion 17
-        targetSdkVersion 21
-        versionCode 8
-        versionName "1.5"
-    }
-    signingConfigs {
-        release {
-        }
+        minSdkVersion 15
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -22,8 +19,8 @@ android {
     }
 }
 
-
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:22.1.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.2.0'
 }
